# feishu-life-os-review-2026-06-02

./: .gitignore  README.md  SOURCE_EXPORT_MANIFEST.md
source/feishu-life-os/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  railway.json
source/feishu-life-os/app/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py  security.py  seed.py
source/feishu-life-os/app/agents/: tools.py  (+4 more)
source/feishu-life-os/docs/: 09_CONTEXT_COMPILER_ARCHITECTURE.md  AGENT_FIRST.md  AGENT_PROTOCOL.md  API_CONTRACT.md  ARCHITECTURE.md  CODEX_HANDOFF.md  DATA_MODEL.md  DECISIONS.md  DEPLOYMENT.md  DOMAIN_MODEL.md  ENV_LOCAL_REDACTED.md  FEISHU_CAPABILITY_MATRIX.md  FEISHU_REPLY_PERMISSION.md  FEISHU_SETUP.md  HANDOFF_PACKAGE_CONTENTS.md  KNOWN_LIMITATIONS.md  LOCAL_GATEWAY.md  NEXT_TASKS.md  OPS_RUNBOOK.md  PRODUCT_SPEC.md  PROGRAMMER_HANDOFF.md  PROJECT_SCAN.md  PROJECT_STATE.md  PROMPTS.md  RAILWAY_CODEX_WORKER.md  REVIEW_REQUEST.md  SAFETY_POLICY.md  SECURITY_PRIVACY.md  USER_GUIDE.md
source/feishu-life-os/scripts/: _gateway_common.ps1  bitable_schema.json  compact_agent_run_inputs.py  create_desktop_shortcut.ps1  ensure_feishu_calendar_attendees.py  register_gateway_task.ps1  run_core_e2e.py  run_mvp_80_validation.py  sample_payloads.http  seed_core_demo.py  start_codex_worker.ps1  start_lifeos_full.ps1  start_local_gateway.ps1  start_reminder_worker.ps1  status_local_gateway.ps1  stop_codex_worker.ps1  stop_local_gateway.ps1  stop_reminder_worker.ps1  sync_unsynced_calendar_events.py  unregister_gateway_task.ps1  update_feishu_calendar_colors.py
(+94 files in other folders)
