[project]
name = "feishu-life-os"
version = "0.1.0"
description = "A Feishu-ready personal operation system for capture, triage, reminders, and daily review."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.26",
  "python-multipart>=0.0.9",
  "psycopg[binary]>=3.1",
  "tzdata>=2024.1; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008", "E501", "SIM114", "UP012", "UP042"]
